# vxOpenLibm

./: .gitignore  README.md
patches/: CMakeLists.txt  toolchain.cmake
patches/include/: openlibm_fenv.h  openlibm_fenv_sh3eb.h
patches/sh3eb/: assert.h  ctype.h  fenv-softfloat.h  fenv.c  string.h
patches/src/: cdefs-compat.h  fpmath.h  sh3eb_fpmath.h
scripts/: _utils.sh  install.sh  uninstall.sh  update.sh
